baniere + favorie + reparation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="favicon.png"/>
 </head>
 <body>
+    <img src="logo-planete-3.png" alt="Logo Planète" class="planet-logo">
     <div class="container">
         <header>
             <h1>Encyclopédie des Pays</h1>
@@ -19,7 +20,7 @@
             <!-- Le bouton de recherche semble superflu si la recherche est dynamique -->
         </div>
         <div id="favoritesContainer">
-            <h2>Favoris</h2>
+            <h2>Favories</h2>
             <div id="favoritesDisplay">(Aucune recherche favorite)</div>
         </div>        
         <div class="content">
@@ -30,7 +31,7 @@
         </div>
     </div>
     <footer>
-        <p>Projet réalisé par [Votre Nom].</p>
+        <p>Projet réalisé par Arthur Laumay et Yani Djoudad.</p>
     </footer>
     <script src="js/main.js"></script>
 </body>
